--- a/class-resources.html
+++ b/class-resources.html
@@ -44,8 +44,7 @@
 							<p>
 							I am trying to build a helpful resource for those seriously studying classical mechanics, A.K.A. dynamical systems, at the level of an
 							advanced undergraduate or early graduate student. Click this <a href='mindmap.pdf'>link</a>
-							to see the mind map. The map has clickable links on nodes for more information (although the links don't appear to work when you view the 
-							pdf through FireFox).
+							to see the mind map. The map has clickable links on nodes for more information. Try control-clicking to bring up in a new window.
 							</p>
 							<footer>
 								<a href="#" class="button special">More</a>
